--- a/package.json
+++ b/package.json
@@ -1,32 +1,29 @@
 {
-    "name": "openvpn-bin",
-    "version": "0.0.3",
-    "description": "Initialize a openvpn instance for mac, windows & linux",
-    "author": {
-        "name": "Luigi Poole",
-        "email": "luigipoole@outlook.com"
-    },
-    "keywords": [
-        "node openvpn",
-        "node vpn",
-        "openvpn client",
-        "openvpn",
-        "client",
-        "vpn"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/luigiplr/openvpn-bin.git"
-    },
-    "main": "index.js",
-    "license": "GPL-3.0",
-    "dependencies": {
-        "bluebird": "^2.9.34",
-        "get-port": "^1.0.0",
-        "lodash": "^3.10.1"
-    },
-    "optionalDependencies": {
-        "node-windows": "^0.1.10",
-        "sudo-prompt": "^1.1.7"
-    }
+  "name": "openvpn-bin",
+  "version": "0.0.3",
+  "description": "Initialize a openvpn instance for mac, windows & linux",
+  "author": {
+    "name": "Luigi Poole",
+    "email": "luigipoole@outlook.com"
+  },
+  "keywords": [
+    "node openvpn",
+    "node vpn",
+    "openvpn client",
+    "openvpn",
+    "client",
+    "vpn"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/luigiplr/openvpn-bin.git"
+  },
+  "main": "index.js",
+  "license": "GPL-3.0",
+  "dependencies": {
+    "bluebird": "^2.9.34",
+    "get-port": "^1.0.0",
+    "lodash": "^3.10.1",
+    "runas": "^3.1.0"
+  }
 }
