--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "dependencies": {
         "bluebird": "^2.9.34",
         "get-port": "^1.0.0",
-        "lodash": "^3.10.1",
-        "runas": "^3.1.0"
+        "lodash": "^3.10.1"
     },
     "devDependencies": {
         "minimist": "^1.2.0"
